--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1002,7 +1002,7 @@
                    class="nav-subitem {% if request.endpoint and 'optimize_video' in request.endpoint %}active{% endif %}"
                    onclick="return BaseApp.checkGuestAccess(event, this)">
                     <i class="ph ph-magic-wand"></i>
-                    <span>Optimize Video</span>
+                    <span>Manage & Optimize</span>
                 </a>
                 {% endif %}
 
