--- a/app/templates/teams/dashboard.html
+++ b/app/templates/teams/dashboard.html
@@ -93,7 +93,7 @@
                     </div>
                     <div class="permission-item">
                         <input type="checkbox" id="perm_optimize_video">
-                        <label for="perm_optimize_video">Optimize Video</label>
+                        <label for="perm_optimize_video">Manage & Optimize</label>
                     </div>
                     <div class="permission-item">
                         <input type="checkbox" id="perm_thumbnail">
@@ -520,7 +520,7 @@ function editPermissions(memberId, permissions) {
                 { id: 'competitors', label: 'Competitors' },
                 { id: 'video_script', label: 'Video Script' },
                 { id: 'video_title', label: 'Upload Studio' },
-                { id: 'optimize_video', label: 'Optimize Video' },
+                { id: 'optimize_video', label: 'Manage & Optimize' },
                 { id: 'thumbnail', label: 'Thumbnail' }
             ]
         },
