--- a/app/templates/tiktok_upload_studio/index.html
+++ b/app/templates/tiktok_upload_studio/index.html
@@ -34,9 +34,9 @@
                         </div>
 
                         <div id="connectionButtons" style="display: none;">
-                            <button id="connectBtn" class="btn-connect" style="display: none;">
-                                <i class="ph ph-tiktok-logo"></i>
-                                Connect TikTok Account
+                            <button id="connectBtn" class="secondary-button" style="display: none;">
+                                <i class="ph ph-link"></i>
+                                <span>Connect TikTok</span>
                             </button>
 
                             <button id="disconnectBtn" class="btn-disconnect" style="display: none;">
