--- a/app/templates/niche/index.html
+++ b/app/templates/niche/index.html
@@ -105,7 +105,7 @@
                         <div class="panel-title-section">
                             <h3 class="panel-title">
                                 <i class="ph ph-trend-up"></i>
-                                What's Hot in Your Niche Right Now
+                                Trending in Your Niche
                             </h3>
                         </div>
                         <div class="panel-controls">
@@ -285,7 +285,7 @@
                         <div class="panel-title-section">
                             <h3 class="panel-title">
                                 <i class="ph ph-trend-up"></i>
-                                What's Hot in Your Niche Right Now
+                                Trending in Your Niche
                             </h3>
                         </div>
                         <div class="panel-controls">
