--- a/app/templates/referral/index.html
+++ b/app/templates/referral/index.html
@@ -70,7 +70,7 @@
                 </li>
                 <li>
                     <i class="ph ph-check-circle"></i>
-                    <span>Reach 100+ referrals to become a Power Referrer</span>
+                    <span>Reach 100+ subscribed referrals to become a Power Referrer and share revenue</span>
                 </li>
             </ul>
         </div>
