--- a/app/templates/optimize_video/index.html
+++ b/app/templates/optimize_video/index.html
@@ -51,7 +51,7 @@
 
                     <!-- Empty State (No Channel Connected) -->
                     <div id="emptyVideos" class="empty-state" style="display: none;">
-                        <i class="ph ph-youtube-logo"></i>
+                        <img src="{{ url_for('static', filename='img/templates/yt_icon_red_digital.png') }}" alt="YouTube" style="width: 56px; height: 56px;">
                         <p>No YouTube Channel Connected</p>
                         <span>Connect your YouTube account in Social Accounts or use the URL option above to optimize any video</span>
                     </div>
